--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 
                                             <div data-mdb-input-init class="form-outline mb-4">
                                                 <label class="form-label mb-2" for="form3Example4cg">Password</label>
-                                                <input type="text" name="password" id="form3Example4cg"
+                                                <input type="password" name="password" id="form3Example4cg"
                                                     class="form-control form-control-lg"
                                                     value="<%= data?.password || '' %>" />
                                             </div>
